# rust_not_rest

./: .gitignore  Cargo.toml  README.md
src/: guess.rs  main.rs  type_writer.rs
